Fix of bugs
