# src/swagger/auth.json
@@ -20,7 +20,7 @@
     "host": "localhost:5000",
     "basePath": "/",
     "paths": {
-        "/users/login/{role}": {
+        "/users/login": {
             "get": {
                 "tags": ["Auth"],
                 "summary": "Connexion d'un utilisateur",
@@ -44,6 +44,7 @@
                     "401": {
                         "description": "Opération non autorisé",
                         "schema": {
+                            "type": "object",
                             "$ref": "#/definitions/MessageResponse"
                         }
                     }
@@ -126,20 +127,20 @@
                     }
                 }
             }
-        },
-        "definitions": {
-            "Connect": {
-                "type": "object",
-                "properties": {
-                    "status": {
-                        "type": "integer"
-                    },
-                    "data": {
-                        "type": "object"
-                    },
-                    "userToken": {
-                        "type": "string"
-                    }
+        }
+    },
+    "definitions": {
+        "Connect": {
+            "type": "object",
+            "properties": {
+                "status": {
+                    "type": "integer"
+                },
+                "data": {
+                    "type": "object"
+                },
+                "userToken": {
+                    "type": "string"
                 }
             }
         },
